k8s/backend-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - port: 1337
      targetPort: 1337

# apiVersion: v1
# kind: Service
# metadata:
#   name: strapi-backend-service
# spec:
#   type: LoadBalancer
#   selector:
#     app: strapi
#   ports:
#     - port: 80
#       targetPort: 1337
