k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
# apiVersion: v1
# kind: Service
# metadata:
#   name: frontend-service
# spec:
#   type: LoadBalancer
#   selector:
#     app: frontend
#   ports:
#     - port: 80
#       targetPort: 3000
